# aptos-sc

./: .gitignore  Cargo.toml  Readme.md  deploy.sh  distribute.sh  tests.sh  time_frame_calc.sh  utils.sh
GGWPCoin/sources/: ggwp.move
GGWPCoin/tests/: test.move
core/: Move.toml
core/sources/: freezing.move  gpass.move
core/tests/: freezing_test.move  gpass_test.move
distribution/: Move.toml
distribution/sources/: distribution.move
distribution/tests/: distribution_test.move
faucet/: Move.toml
faucet/sources/: faucet.move
faucet/tests/: test.move
games/: Move.toml
games/sources/: games.move
games/tests/: games_test.move
gateway/: Move.toml
gateway/sources/: gateway.move
gateway/tests/: gateway_test.move
ggwp_coin/: Move.toml  mint_to.sh
ggwp_coin/sources/: ggwp.move
nft/: Cargo.toml
nft/src/: app.rs  config.rs  main.rs  token.rs
nft_market/: Move.toml
nft_market/sources/: market.move
nft_market/tests/: market_test.move
staking/: Move.toml
staking/sources/: staking.move
staking/tests/: staking_test.move
staking_deleted/: Move.toml
staking_deleted/tests/: staking_test.move
