[package]
name = "nft-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Misc
serde = "1.0.130"
serde_json = "1.0.68"
clap = "2.33.3"
hex = "0.4.3"
anyhow = "1.0.66"

# Async Runtime
tokio = "1.23.0"

# Aptos dependencies
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
url = "2.3.1"

[[bin]]
name = "nft-client"
path = "src/main.rs"
